*Added CEO(Can be every screen) Screen with 6 buttons. *Made connection between Login to CEO Screen. Without any Authentication, (Only to check if it works.)

--- a/BiteMeClient/.classpath
+++ b/BiteMeClient/.classpath
@@ -7,6 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OCSF"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/javafx"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFx"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
