Big Fix & Updates

--- a/BiteMeSrv/.classpath
+++ b/BiteMeSrv/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/BiteMeClient"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFX"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFx"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavafX"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
