JavaDoc changes, day before submit

--- a/BiteMeClient/.classpath
+++ b/BiteMeClient/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OCSF"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/BiteMeCommon"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/javafx"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/javaFXIdo"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
